<resources>
    <string name="app_name" translatable="false">KCClock</string>
    <string name="appbar_clock" translatable="false">KCClock</string>
    <string name="appbar_alarm_list">KCClock - Alarms</string>
    <string name="appbar_alarm_detail">Alarm Detail</string>
    <string name="appbar_alarm_ring">KCClock Alarm</string>
    <string name="title_clock">Clock</string>
    <string name="title_alarm" translatable="false">Alarm</string>
    <string name="radio_time_based">Time-based alarm</string>
    <string name="radio_event_based">Event-based alarm</string>
    <string name="action_settings">Settings</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_save">Save</string>

    <string name="initial_sunday">S</string>
    <string name="initial_monday">M</string>
    <string name="initial_tuesday">T</string>
    <string name="initial_wednesday">W</string>
    <string name="initial_thursday">T</string>
    <string name="initial_friday">F</string>
    <string name="initial_saturday">S</string>
    <string name="short_sunday">Sun</string>
    <string name="short_monday">Mon</string>
    <string name="short_tuesday">Tue</string>
    <string name="short_wednesday">Wed</string>
    <string name="short_thursday">Thu</string>
    <string name="short_friday">Fri</string>
    <string name="short_saturday">Sat</string>
    <string name="sound">Sound</string>
    <string name="vibrate">Vibrate</string>
    <string name="alarm_name_hint">Alarm name</string>
    <string name="every">Every</string>
    <string name="every_day">Every day</string>
    <string name="next_time">Next time</string>
    <string name="title_activity_alarm_ring" translatable="false">AlarmRingActivity</string>
    <string name="snooze">Snooze</string>
    <string name="dismiss">Dismiss</string>
    <string name="choose_event_text">Choose your event</string>
    <string name="event_battery_full_charged">Battery fully charged</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="setting_general_header">General</string>

    <!-- General Preference -->
    <string name="setting_language_title">Language</string>
    <string name="action_animation">Animation</string>
    <string name="appbar_activity_animation">KCClock - Animation</string>
    <string name="action_ok" translatable="false">OK</string>
</resources>
